[package]
name = "rust_sign"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.13.0"
log = { version = "0.4.14", default-features = false, features = [
    "std",
    "serde",
] }
env_logger = "0.9.0"
chrono = "0.4.19"
thiserror = "1.0.30"

serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.72"

web3 = { version = "0.17.0", default-features = false, features = [
    "signing",
    "http-rustls-tls",
] }
secp256k1 = "0.20.3"
web3-macros = { version = "0.1.0", path = "web3-macros" }

sea-orm = { version = "0.4.1", default-features = false, features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
] }

actix-web = "4.0.0-beta.13"
