[package]
name = "excel_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ooxml = "0.2.4"
itertools = "0.9.0"

sea-orm = { version = "0.4.1", default-features = false, features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
] }
actix-web = "4.0.0-beta.13"